--- a/style.css
+++ b/style.css
@@ -1195,6 +1195,10 @@ body.active {
         width: 8px;
         height: 8px;
     }
+
+    .zheader__nav {
+        max-width: 100%;
+    }
 }
 
 @media screen and (max-width: 390px) {
